Fix contact button spacing

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -30,6 +30,8 @@
       transition: background-color 0.2s ease-in-out;
       position: relative;
       cursor: pointer;
+      line-height: inherit;
+      letter-spacing: inherit;
 
       &:hover {
         background-color: shared.$colorBg2;
